# Lecture_tracker

./: README.md  my_schedule_data.json  pyproject.toml  schedule_data.json
src/: main.py
src/components/: lecture_card.py  lectures_list.py  statistics_panel.py  weekly_grid.py
src/locales/: en.json  he.json
src/models/: course.py  lecture.py  schedule.py
src/utils/: i18n.py  theme.py
src/views/: add_course_view.py  add_lecture_view.py  add_meeting_view.py  login_page.py  onboarding_view.py  schedule_view.py  settings_view.py
