[project]
name = "LecCheck"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "emanuelb4100@gmail.com" }
]
dependencies = [
    "flet>=0.81.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop-light>=0.81.0",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "com.emanuel.leccheck"
product = "LecCheck"
company = "Emanuel"
copyright = "Copyright (C) 2026"

[tool.flet.app]
path = "src"